--- a/resolutions.css
+++ b/resolutions.css
@@ -1,16 +1,14 @@
-html, body {
-	background-color: #333;
-	width:100%;
+html, body  {
+	background-color: #fff;
+	padding-bottom:30px;
 }
 #outer-wrap {
 	width:1100px;
-	background-color: #3288A1;
+	background-color: #fff;
 	display:block;
 	margin: -8px auto 0px auto;
 	top:0px;
 	bottom:0px;
-	border-right:1px #999 solid;
-	border-left:1px #999 solid;
 	padding-top:30px;
 }
 	
